# refactored-waddle

./: .black.py  .env  .gitignore  .jest.config.mjs  .prettierignore  CODEOWNERS  Cargo.toml  OWNERS  Package.swift  Pipfile  README.md  findmyphone.py  package.json  php.ini  pyproject.toml  runner  search.rs  stats
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 1 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 10 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 11 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 12 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 13 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 14 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 15 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 3 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 4 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 6 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 7 playground.playground/: Contents.swift
CWC Learn Swift 2019 Challenges/XCode playground files/Challenge 8 playground.playground/: Contents.swift
Sources/refactored-waddle/: AddNumbers.swift  ChangeName.swift  Hello.swift  IsSeven.swift  ReduceNumbers.swift  SquareAndCube.swift  SquareRoot  SquareRoot.swift  Todo.swift  main.swift
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: addition.js.html  convertMinutesToSeconds.js.html  countMatches.js.html  defangIPaddr.js.html  fiscalCode.js.html  giveMeSomething.js.html  increment.js.html  index.html  isPalindrome.js.html  runningSum.js.html
mygoapp/: go.mod
mygoapp/algorithms/: algorithms.go  algorithms_test.go
mygoapp/arraymanipulations/: arraymanipulations.go  go.mod
mygoapp/examples/stringmanipulations/: strings.go
mygoapp/hello/: hello.go
python_refactored_waddle/: addition.py  anagram.py  area_of_country.py  circuit_power.py  class_average.py  climb_stairs.py  cuboid.py  defang_ip_addr.py  factorial.py  find_median_sorted_arrays.py  finder.py  fiscal_code.py  get_determinant.py  give_me_something.py  is_anagram.py  is_seven.py  jumping_on_clouds.py  kids_with_candies.py  less_than_100.py  list_operations.py  luhn_algorithm.py  maximum_wealth.py  merge_two_lists.py  my_circular_queue.py  num_identical_pairs.py  num_jewels_in_stones.py  parking_system.py  remove_element.py  remove_leading_trailing.py  restoreString.py  reverse_array.py  satisfactory_academic_progress.py  shuffle.py  smaller_numbers_than_current.py  sort_array_by_parity_ii.py  sort_sentence.py  summa_cum_laude.py  triangle_area.py
shell_bash/: add.sh  add.sh_DIRECTIONS.html  leet_code_problem_193.sh  leet_code_problem_195.sh  loop.sh_DIRECTIONS.html
sql/: codility_question_1.html
src/: 99_bottles.rs  EH.json  MyCircularQueue.js  ParkingSystem.js  addName.js  add_name.rs  addition.js  addition.rs  adjacentElementsProduct.js  adjacent_elements_product.rs  allLongestStrings.js  almostIncreasingSequence.js  almost_increasing_sequence.rs  alphabetSoup.js  alphabet_soup.rs  anagrams.js  animals.rs  areaOfCountry.js  area_of_country.rs  arrayOfMultiples.js  array_of_multiples.rs  ascendingDescendingNone.js  ascending_descending_none.rs  balancedStringSplit.js  balanced_string_split.rs  baseballPoints.js  binary.js  bitwiseIndex.js  boggle.js  bottles_song.rs  boundedRatio.js  burglarySeries.js  burglary_series.rs  calcAge.js  calc_age.rs  calculateFuel.js  calculate_fuel.rs  calculate_mode.rs  cardHide.js  cardValidator.js  (+252 more)
swift_challenges/: Package.swift  README.md
swift_challenges/.build/: debug.yaml  workspace-state.json
tests/: addName.test.js  addition.test.js  addition_test.py  alphabetSoup.test.js  anagrams.test.js  areaOfCountry.test.js  area_of_country_test.py  arrayOfMultiples.test.js  balancedStringSplit.test.js  baseballPoints.test.js  bitwiseIndex.test.js  burglarySeries.test.js  calcAge.test.js  calculateFuel.test.js  cardHide.test.js  checkEquality.test.js  checkEquals.test.js  checkIfPangram.test.js  circleOOP.test.js  circuitPower.test.js  circuit_power_test.py  climb_stairs_test.py  comp.test.js  compareTriplets.test.js  convertBooleanToString.test.js  convertHourMinutesToSeconds.test.js  convertMinutesToSeconds.test.js  correctChange.test.js  countTrue.test.js  createTargetArray.test.js  defangIPaddr.test.js  defangIPaddr_test.py  derivative.test.js  destructureClasses.test.js  distributeCandies.test.js  evaluateStringCode.test.js  factorial_test.py  fibonacci.test.js  findDuplicates.test.js  findNemo.test.js  (+80 more)
tests/refactored-waddleTests/: SquareRootTests.swift  TodoTests.swift  refactored_waddleTests.swift
(+63 files in other folders)
