[package]
name = "rust_refactored_waddle"
version = "0.1.0"
authors = ["Stephen Smith <wearypossum4770@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = "*"
tokio-tungstenite = "*"
jemallocator = "*"
num-traits = "*"
itertools = "*"
ferris-says = "*"
regex = "*"
cargo-eval = "*"
wasm-bindgen = "*"
nodejs-helper = "*"
eval = "*"
chrono = "*"
tokio = "*"
pdfshrink = "*"
maplit = "*"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0"
