#==========================================================================================
# BLACK - PYTHON FORMATTING TOOL  https://github.com/psf/black
#==========================================================================================
[tool.poetry]
name = "python-refactored-waddle"
version = "0.1.0"
description = ""
authors = ["Stephen Smith <wearypossum4770@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.0"
coverage = "^5.5"
pytest-django = "^4.2.0"
black = "^21.5b1"
isort = "^5.8.0"
pytest-clarity = "^0.3.0-alpha.0"
pytest-asyncio = "^0.15.1"
pytest-emoji = "^0.2.0"
django-coverage-plugin = "^1.8.0"
django-extensions = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
#==========================================================================================
# PYTEST - TESTING FRAMEWORK https://docs.pytest.org/
#==========================================================================================
[tool.pytest_watch]
ignore = ['./integration-tests']
nobeep = true

[tool.pytest.ini_options]
automock_unlocked = true
minversion = "6.0"
addopts = "-ra -vv --disable-warnings -W ignore::DeprecationWarning "
python_files = [
  "test.py",
  "tests.py",
  "test_*.py",
  "*_test.py",
  "check_*.py",
  "*_check.py",
  "example_*.py",
  "*_example.py"
]
python_functions = [
  "suite_*",
  "*_suite",
  "test_*",
  "*_test",
  "check_*",
  "*_check",
  "example_*",
  "*_example"
]
python_classes = [
  "Test*",
  "*Test",
  "Check*",
  "Suite*",
  "*Suite",
  "*Check",
  "Example*",
  "*Example"
]
filterwarnings = [
  "error",
  "ignore::UserWarning",
  # note the use of single quote below to denote "raw" strings in TOML
  'ignore:function ham\(\) is deprecated:DeprecationWarning'
]

#testpaths = ["tests"]
#==========================================================================================
# BLACK - PYTHON FORMATTING TOOL  https://github.com/psf/black
#==========================================================================================
[tool.black]
line-length = 88
#target-version = ['py38',]
include = '\.pyi?$'

#==========================================================================================
# ISORT - PYTHON IMPORT SORTING  https://pycqa.github.io/isort/
#==========================================================================================
[tool.isort]
profile = "black"
multi_line_output = 3
#==========================================================================================
# VSOT - DJANGO/JINJA TEMPLATE FORMATTING   https://github.com/benhowes/vsot
#==========================================================================================
